# pluggable-event-system

./: .env.example  .env.rag-ingestion  .gitignore  .sdlc_validate.py  README.md  package-lock.json  package.json  port-registry.yaml  run-demo.mjs  tsconfig.json
.claude-plugin/: marketplace.json
.sdlc/evidence/rag-ingestions/: rag-ingestions-2026-07-08T16-45-04-924Z.json
csharp/AiContracts/: AiContracts.csproj  Contracts.cs
docs/: pluggable-rag-review-2026-07-08.md
fixtures/ai-contracts/: loader-load-request-event.json  loader-raw-document-output-event.json  output-error-event.json  plugin-descriptor-loader.json  rag-document.json
fixtures/rag-ingestion/docs/: incident-response.md  plugin-contracts.md  vector-search.md
plugins/plugin-architecture-dev/: README.md
plugins/plugin-architecture-dev/.claude-plugin/: plugin.json
plugins/plugin-architecture-dev/agents/: ai-system-decomposer.md  code-quality-reviewer.md  evidence-verifier.md  implementer.md  research-analyst.md  sdlc-orchestrator.md  security-reviewer.md  spec-reviewer.md  system-architect.md  test-engineer.md
plugins/plugin-architecture-dev/commands/: ai-decompose.md  ai-ingest.md  architect.md  implement.md  plan.md  quality-gate.md  rag-lego.md  research.md  review.md  sdlc-status.md  sdlc.md  test.md
python/ai_contracts/: pyproject.toml
python/ai_contracts/ai_contracts/: __init__.py  models.py
python/ai_contracts/tests/: conftest.py  test_models.py
scripts/: run-rag-ingestions.mjs
traces/ingestion-retrieval-live/: REPORT.md  indexing-proof.json  indexing-proof.md
(+25 files in other folders)
