[project]
name = "ai-contracts"
version = "0.1.0"
description = "Pydantic parity models for pluggable AI engineering contracts."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8,<3"
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
